# QSerial

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  default.nix  libusb.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mutualtest.cpp  mutualtest.h  mutualtest.ui  qserial.nix  qserial.pro  resources.qrc  serialport.cpp  serialport.h  serialportch34x.cpp  serialportch34x.h  serialportcp210x.cpp  serialportcp210x.h  serialportdummy.h  serialportqt.cpp  serialportqt.h  shell.nix
.github/workflows/: build.yml  release.yml
drivers/: libusb.h  serialport.cpp  serialportch34x.cpp  serialportch34x.h  serialportcp210x.cpp  serialportpl2303.cpp  serialportpl2303.h  serialportqt.h
resources/: index.html
